--- a/templates/login.html
+++ b/templates/login.html
@@ -16,10 +16,10 @@
   </a>
 
   <div class="leaves">
-    <img src="{{ url_for('static', filename='img/Daun.png') }}" class="leaf leaf1">
-    <img src="{{ url_for('static', filename='img/Daun.png') }}" class="leaf leaf2">
-    <img src="{{ url_for('static', filename='img/Daun.png') }}" class="leaf leaf3">
-    <img src="{{ url_for('static', filename='img/Daun.png') }}" class="leaf leaf4">
+    <img src="{{ url_for('static', filename='img/daun.png') }}" class="leaf leaf1">
+    <img src="{{ url_for('static', filename='img/daun.png') }}" class="leaf leaf2">
+    <img src="{{ url_for('static', filename='img/daun.png') }}" class="leaf leaf3">
+    <img src="{{ url_for('static', filename='img/daun.png') }}" class="leaf leaf4">
   </div>
 
   {% with messages = get_flashed_messages(with_categories=true) %}
