--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,317 +7,6 @@
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-            background-color: #fff;
-        }
-
-        .contact-wrapper {
-            width: 90%;
-            max-width: 1100px;
-            margin: 50px auto;
-            background: white;
-            border-radius: 25px;
-            padding: 50px;
-            display: flex;
-            justify-content: space-between;
-            gap: 40px;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.20);
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* BACKGROUND DECORATION */
-        .contact-wrapper::before {
-            content: "";
-            position: absolute;
-            width: 260px;
-            height: 260px;
-            background: #4CAF50;
-            top: -50px;
-            right: -30px;
-            border-radius: 30px;
-            z-index: 0;
-        }
-
-        .contact-wrapper::after {
-            content: "";
-            position: absolute;
-            width: 140px;
-            height: 140px;
-            background: #4CAF50;
-            bottom: -30px;
-            left: -20px;
-            border-radius: 20px;
-            z-index: 0;
-        }
-
-        /* LEFT FORM */
-        .form-section {
-            width: 55%;
-            z-index: 2;
-        }
-
-        .form-section h2 {
-            font-size: 32px;
-            margin-bottom: 10px;
-        }
-
-        .form-section p {
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 25px;
-            z-index: 5;
-            position: relative;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        input,
-        textarea {
-            width: 100%;
-            padding: 12px 15px;
-            border-radius: 8px;
-            border: 1px solid #ddd;
-            outline: none;
-            font-size: 14px;
-        }
-
-        textarea {
-            height: 120px;
-            resize: none;
-        }
-
-        button {
-            position: relative;
-            z-index: 6;
-            width: 100%;
-            padding: 14px;
-            border: none;
-            background: #05521c;
-            color: white;
-            border-radius: 8px;
-            font-weight: 600;
-            cursor: pointer;
-            margin-top: 5px;
-        }
-
-        button:hover {
-            background: #333;
-        }
-
-        /* RIGHT INFO CARD */
-        .info-card {
-            width: 40%;
-            background: #2E7D32;
-            border-radius: 18px;
-            padding: 40px 30px;
-            color: white;
-            z-index: 2;
-            position: relative;
-        }
-
-        .info-card h3 {
-            font-size: 24px;
-            margin-bottom: 25px;
-        }
-
-        .info-item {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            font-size: 14px;
-        }
-
-        .info-item i {
-            width: 36px;
-            height: 36px;
-            background: rgba(255, 255, 255, 0.15);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            color: #C8E6C9;
-            font-size: 16px;
-        }
-
-        /* Circle accent */
-        .accent-circle {
-            width: 18px;
-            height: 18px;
-            background: #4CAF50;
-            border-radius: 50%;
-            position: absolute;
-            bottom: -8px;
-            left: 20px;
-        }
-
-        .navbar {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            padding: 10px 60px;
-            background: #ffffff;
-        }
-
-        .logo img {
-            height: 60px;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 40px;
-            align-items: center;
-            margin-left: 50px;
-            border-left: 2px solid #333;
-            padding-left: 50px;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: black;
-            font-weight: 400;
-            transition: 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: #4CAF50;
-        }
-
-        .leaf {
-            position: absolute;
-            width: 80px;
-            opacity: 0.9;
-            z-index: 1;
-        }
-
-        .leaf-1 {
-            top: 180px;
-            right: 550px;
-            transform: rotate(-20deg);
-            z-index: 20;
-        }
-
-        .leaf-2 {
-            bottom: 40px;
-            width: 160px;
-            left: 90spx;
-            transform: rotate(-20deg);
-        }
-
-        .leaf-3 {
-            bottom: 10px;
-            right: 170px;
-            transform: rotate(70deg) translateY(-50%);
-        }
-
-
-        .popup {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            display: none;
-            /* Awalnya sembunyi */
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-
-        .popup-box {
-            background: white;
-            padding: 30px;
-            border-radius: 10px;
-            text-align: center;
-            min-width: 300px;
-        }
-
-
-        @media (max-width: 768px) {
-            .navbar {
-                flex-direction: column;
-                padding: 15px 20px;
-                gap: 15px;
-            }
-
-            .nav-links {
-                margin-left: 0;
-                border-left: none;
-                padding-left: 0;
-                width: 100%;
-                justify-content: center;
-                gap: 20px;
-            }
-
-            .contact-wrapper {
-                flex-direction: column;
-                padding: 30px 20px;
-                margin: 20px auto;
-                width: 90%;
-                border-radius: 15px;
-            }
-
-            .contact-wrapper::before,
-            .contact-wrapper::after {
-                display: none;
-            }
-
-            .form-section,
-            .info-card {
-                width: 100%;
-            }
-
-            .form-section h2 {
-                font-size: 24px;
-            }
-
-            .form-group {
-                margin-bottom: 40px;
-            }
-
-            .info-card {
-                margin-top: 20px;
-                padding: 30px;
-            }
-
-            .leaf-1 {
-                top: 130px;
-                left: 360px;
-                right: auto;
-                width: 70px;
-                transform: rotate(5deg);
-            }
-
-            .leaf-2 {
-                bottom: 140px;
-                left: -20px;
-                width: 100px;
-                transform: rotate(-30deg);
-            }
-
-            .leaf-3 {
-                bottom: 20px;
-                right: -15px;
-                left: auto;
-                width: 80px;
-                transform: rotate(45deg);
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -343,7 +32,7 @@
 
             <input type="hidden" name="_subject" value="Pesan Baru dari Website HydroSmart">
 
-            <input type="hidden" name="_next" value="https://hydrosmart.up.railway.app/contact?success=true">
+            <input type="hidden" name="_next" value="https://hydrosmart1.vercel.app/contact?success=true">
 
             <input type="hidden" name="_captcha" value="false">
 
