--- a/templates/contact.html
+++ b/templates/contact.html
@@ -343,7 +343,7 @@
 
             <input type="hidden" name="_subject" value="Pesan Baru dari Website HydroSmart">
 
-            <input type="hidden" name="_next" value="https://hydrosmartt.vercel.app/contact?success=true">
+            <input type="hidden" name="_next" value="https://hydrosmarts.vercel.app/contact?success=true">
 
             <input type="hidden" name="_captcha" value="false">
 
